fix off centered breadcrumb item button

--- a/src/components/layout/Layout/Header/BreadCrumbs.scss
+++ b/src/components/layout/Layout/Header/BreadCrumbs.scss
@@ -17,7 +17,7 @@
   }
 
   .bread-crumb-item {
-    display: flex;
+    @include vertical-flex-c();
     cursor: pointer;
 
     &:last-child {
